plugins {
    id 'java'
    id 'net.neoforged.moddev' version '2.0.141'
}
version = '0.1.2-alpha'
group = 'dev.maire.nourished'
base {
    archivesName = 'nourished'
}
java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}
sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources', 'src/generated/resources']
        }
    }
}
jar {
    from(sourceSets.main.output)
    manifest {
        attributes([
            'Specification-Title'     : 'nourished',
            'Specification-Vendor'    : 'maire',
            'Specification-Version'   : '1',
            'Implementation-Title'    : project.name,
            'Implementation-Version'  : project.jar.archiveVersion,
            'Implementation-Vendor'   : 'maire',
            'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
            'Jar-Version'             : project.version
        ])
    }
}
neoForge {
    version = '21.1.228'
    parchment {
        mappingsVersion = '2024.11.17'
        minecraftVersion = '1.21.1'
    }
    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', 'nourished'
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', 'nourished'
        }
        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', 'nourished'
        }
        data {
            data()
            programArguments.addAll '--mod', 'nourished',
                    '--all',
                    '--output', file('src/generated/resources/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
        }
    }
    mods {
        nourished {
            sourceSet(sourceSets.main)
        }
    }
}
repositories {
    maven { url = 'https://maven.architectury.dev/' }
    maven { url = 'https://maven.blamejared.com' }
    maven { url = 'https://maven.latvian.dev/releases' }
    maven { url = 'https://maven.terraformersmc.com/releases/' }
    maven { url = 'https://www.cursemaven.com' }
    maven {
        name = 'Modrinth'
        url = 'https://api.modrinth.com/maven'
        content {
            includeGroup 'maven.modrinth'
        }
    }
}
dependencies {
    implementation "me.shedaniel.cloth:cloth-config-neoforge:15.0.140"
    compileOnly "dev.latvian.mods:kubejs-neoforge:2101.7.2-build.295"
    compileOnly "mezz.jei:jei-1.21.1-common-api:+"
    compileOnly "mezz.jei:jei-1.21.1-neoforge-api:+"
    compileOnly "me.shedaniel:RoughlyEnoughItems-neoforge:+"
    compileOnly "dev.emi:emi-neoforge:+"
    compileOnly "vazkii.patchouli:Patchouli:1.21.1-93-NEOFORGE:api"
    runtimeOnly "vazkii.patchouli:Patchouli:1.21.1-93-NEOFORGE"
    compileOnly "maven.modrinth:spice-of-life-onion:1.5.6"
}
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
